--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
+<!-- Wireframe Homework -->
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Title of the document</title>
-</head>
+<html lang="en-us">
 
+<head>
+  <meta charset="UTF-8">
+  <title>HW-Wireframe</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
-The content of the document......
+    <header>header</header>
+
+    <section id="nav">nav</section>
+
+    <section id="section">section</section>
+
+    <section id="article">article</section>
+
+    <section id="headers"> h1, h2, h3</section>
+
+    </div><section id="p">p</section>
+
+     <section id="aside">aside</section>
+
+    <footer>footer</footer>
+
+      
 </body>
 
 </html>
